# ChangeLog for www-plugins/adblock-mozilla-plugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*adblock-mozilla-plugin-1.1.1 (20 Nov 2009)

  20 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +adblock-mozilla-plugin-1.1.1.ebuild:
  Add Adblock plus for mozilla firefox
