@@ -6,3 +6,5 @@ DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
 EBUILD calcboot-3.75.4-r1.ebuild 1601 RMD160 8971ae4b694ef27b0a815b09933a8ae0c96e671c SHA1 6e641b5b202099acd0919dbbddc50375db14de06 SHA256 c53c332fc0d7e460cb2190aae916e1c1125de666d1671f9af7cc63c97f3f8934
 EBUILD calcboot-3.82.0-r1.ebuild 1600 RMD160 06be73aa11ac01867083f9b307044118708aa1e9 SHA1 21ca9d04e485a3dfda12b6d53bccfb856a033855 SHA256 2d065d9fa43c4f958de525c45c6943bdb6da6ca4bf79ddfcb1edbca541c562fe
+MISC ChangeLog 320 RMD160 307ac1e7158edc09523d4c09ab2e27ce6af10d7d SHA1 b3bbc28963639ab7fa18eae1ea7058a5a4d10977 SHA256 7c7a04455001d5a8d1d2b00b2054c3cba16c778ba41a7da6650ddbad8675f3fb
+MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
