@@ -1,3 +1,4 @@
 DIST adblock_plus-1.1.1.xpi 297455 RMD160 4ebd22e84f4a18d3ea341c46fb431ef5ea9b62e6 SHA1 e95e558d65759a078935c61b4f937f1dcb31527d SHA256 da192da1d8157a416ffb699a55cfaee96800f8a659bccfb76ec84858207f57cd
 EBUILD adblock-mozilla-plugin-1.1.1.ebuild 654 RMD160 f13574897865eb893ec5779e0807252136af2d14 SHA1 02582a8cd1232689214af2696f6810fdabb2b498 SHA256 322ea17b0f0ec1e0336b29e4fd9a9f4a040c1f274dbc4f6bb5189d89882228c5
-MISC ChangeLog 319 RMD160 a125fcb8ac3f1d8fc72f108b91a489b079acb38e SHA1 afa3192cbdfb09ecf3bb32eddd442336bac9fcd0 SHA256 bacbf242a96a4723052306efdf472dc2eaded035dacf58b413b1ce604f4d10cc
+MISC ChangeLog 412 RMD160 a3d276eab55d3b030fe67d6b2fcff82e3ee587e1 SHA1 a47351fbbb804902b8b7f7c2ef2e497441f73c11 SHA256 6ec509b517fff87c5b5b0698d98b6bad017454d2f1ce8c947cd77024689da636
+MISC metadata.xml 289 RMD160 c2646cf03d8f6d9b84e8b16e64a4ee5df00ddda6 SHA1 f94ac94914d05b332f65d05f9049c21a1962e685 SHA256 6e22ef22de2029288736b5b9a585712d5a708b6db97f4db7fc4f9b9fb93472bf
