@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>maintainer-wanted</herd>
+<longdescription lang="en">
+Adblock Plus: plugin for mozilla firefox, which blocked different ads.
+</longdescription>
+</pkgmetadata>
+
