@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru> 
+  +metadata.xml:
+  Fix package.
+
 *adblock-mozilla-plugin-1.1.1 (20 Nov 2009)
 
   20 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
